--- a/CallYourMother/res/menu/main.xml
+++ b/CallYourMother/res/menu/main.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_data_android_contacts_test"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="Data Test Android Contacts"/>
 
 </menu>
