--- a/CallYourMother/res/layout/header.xml
+++ b/CallYourMother/res/layout/header.xml
@@ -6,9 +6,12 @@
     android:layout_height="fill_parent"
     android:background="#D5E4EB"> 
     
-     <ListView
-        android:id="@+id/listView1"
+
+    <ImageView
+        android:id="@+id/logoView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
-     
+        android:layout_height="40dp"
+        android:src="@drawable/logo" />
+    
+
 </LinearLayout>
