UI Commit 3: addition of classes
Added the activities to add a circle and see existing notifications.
Doesn't work yet, but started hammering out the basic structure. Created
xmls for now to build off of. Still need to implement functionality.

--- a/CallYourMother/res/layout/add_circle_footer_view.xml
+++ b/CallYourMother/res/layout/add_circle_footer_view.xml
@@ -4,13 +4,21 @@
     android:layout_height="match_parent"
     android:background="#D5E4EB"
     android:orientation="horizontal" >
-    
-    
+
     <Button
         android:id="@+id/notification_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+         android:textSize="12dp"
         android:text="Make notification" />
+    
+        <Button
+        android:id="@+id/buttonView"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:textSize="12dp"
+        android:text="Add a Circle"
+        />
 
 
 </LinearLayout>
