--- a/CallYourMother/res/menu/main.xml
+++ b/CallYourMother/res/menu/main.xml
@@ -1,9 +1,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/action_data_android_circles_create"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Create Sample Circles"/>
+    <item
+        android:id="@+id/action_data_android_add_random_contacts"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Add Random Contacts to Circles"/>
+    <item
         android:id="@+id/action_data_android_contacts_test"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="Data Test Android Contacts"/>
-
+    <item
+        android:id="@+id/action_data_android_database_delete"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Delete Database"/>
+    
 </menu>
