--- a/CallYourMother/res/menu/main.xml
+++ b/CallYourMother/res/menu/main.xml
@@ -11,10 +11,15 @@
         android:showAsAction="never"
         android:title="Add Random Contacts to Circles"/>
     <item
-        android:id="@+id/action_data_android_contacts_test"
+        android:id="@+id/action_data_circles_test"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="Data Test Android Contacts"/>
+        android:title="Data Test Circles"/>
+    <item
+        android:id="@+id/action_data_notifications_test"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Data Test Notifications"/>
     <item
         android:id="@+id/action_data_android_database_delete"
         android:orderInCategory="100"
