--- a/CallYourMother/res/menu/main.xml
+++ b/CallYourMother/res/menu/main.xml
@@ -20,6 +20,18 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="Data Test Notifications"/>
+
+    <item
+        android:id="@+id/action_data_notifications_schedule_test"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Data Test Notification Logic"/>
+    
+    <item
+        android:id="@+id/action_data_row_counts_test"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Show Table Row Counts"/>
     <item
         android:id="@+id/action_data_android_database_delete"
         android:orderInCategory="100"
