--- a/CallYourMother/res/layout/add_circle_footer_view.xml
+++ b/CallYourMother/res/layout/add_circle_footer_view.xml
@@ -3,22 +3,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D5E4EB"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/notification_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Make notification"
+            android:textSize="12dp" />
+
+        <Button
+            android:id="@+id/buttonView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add a Circle"
+            android:textSize="12dp" />
+    </LinearLayout>
 
     <Button
-        android:id="@+id/notification_test"
+        android:id="@+id/get_calls_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-         android:textSize="12dp"
-        android:text="Make notification" />
-    
-        <Button
-        android:id="@+id/buttonView"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:textSize="12dp"
-        android:text="Add a Circle"
-        />
-
+        android:text="Get recent calls"
+        android:textSize="12dp" />
 
 </LinearLayout>
