--- a/CallYourMother/res/layout/add_circle_footer_view.xml
+++ b/CallYourMother/res/layout/add_circle_footer_view.xml
@@ -18,18 +18,20 @@
             android:textSize="12dp" />
 
         <Button
-            android:id="@+id/buttonView"
+            android:id="@+id/button_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Add a Circle"
             android:textSize="12dp" />
+
+        
     </LinearLayout>
 
-    <Button
+        
+        <Button
         android:id="@+id/get_calls_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Get recent calls"
         android:textSize="12dp" />
-
 </LinearLayout>
