--- a/CallYourMother/res/layout/add_footer.xml
+++ b/CallYourMother/res/layout/add_footer.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
 	    <TextView 
-              android:id="@+id/contactListView"
+              android:id="@+id/plus_contact"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
