--- a/CallYourMother/res/layout/circle_item.xml
+++ b/CallYourMother/res/layout/circle_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/circle_item"
     android:orientation="horizontal" 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -22,6 +23,7 @@
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="(X Contacts)"/>
+
 
     
     </LinearLayout>
