--- a/CallYourMother/res/layout/add_footer.xml
+++ b/CallYourMother/res/layout/add_footer.xml
@@ -23,6 +23,7 @@
 	              android:id="@+id/cancel"
 	              android:layout_width="wrap_content"
 	              android:layout_height="wrap_content"
+	              android:layout_weight="0.5"
 	              android:text="Cancel" />
 	          
    
@@ -30,6 +31,7 @@
 	              android:id="@+id/submit"
 	              android:layout_width="wrap_content"
 	              android:layout_height="wrap_content"
+	              android:layout_weight="0.5"
 	              android:text="Submit" />
 	          
 	 </LinearLayout>
