--- a/CallYourMother/res/layout/view_footer.xml
+++ b/CallYourMother/res/layout/view_footer.xml
@@ -11,34 +11,22 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/notification_test"
+            android:id="@+id/delete_circle_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Make notification"
-            android:layout_weight="0.33"
+            android:text="Delete"
+             android:layout_weight="0.5"
             android:textSize="12dp" />
 
         <Button
-	        android:id="@+id/get_calls_test"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="Get recent calls"
-	        android:layout_weight="0.33"
-	        android:textSize="12dp" />
-         
-         
-         <Button
-            android:id="@+id/add_circle_button"
+            android:id="@+id/edit_circle_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add a Circle"
-            android:layout_weight="0.33"
+             android:layout_weight="0.5"
+            android:text="Edit"
             android:textSize="12dp" />
 
-         
         
     </LinearLayout>
 
-        
-       
 </LinearLayout>
