Updated adding contacts

--- a/CallYourMother/res/layout/add_footer.xml
+++ b/CallYourMother/res/layout/add_footer.xml
@@ -10,9 +10,12 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
-              android:textSize="30dp"
+              android:textSize="35dp"
               android:paddingBottom="20dp"
+              android:paddingLeft="10dp"
+              android:textColor="#009e37"
               android:text="+"/>
+	   
            
                
           
