--- a/CallYourMother/res/layout/contact_item.xml
+++ b/CallYourMother/res/layout/contact_item.xml
@@ -18,7 +18,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-       <LinearLayout
+
+        
+               <RelativeLayout
         android:id="@+id/info_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
@@ -29,9 +31,26 @@
 			    android:paddingRight="5dp"
 			    android:textSize="20dp"
 			    android:textColor="#000000"
-			    android:text="Joe Shmoe"/>    
+			    android:text="Joe Shmoe"/>  
 			    
-         </LinearLayout>
+	     
+	        
+	        <TextView
+			    android:id="@+id/delete_contact_view"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_alignParentRight="true"
+			    android:textSize="20dp"
+			    android:textColor="#ff0000"
+			    android:text=""/>
+			    
+         </RelativeLayout>
+        
+        
+        
+    
+			    
+      
 		
         <TextView
 		    android:id="@+id/contact_number_view"
