--- a/CallYourMother/res/layout/notification_footer_view.xml
+++ b/CallYourMother/res/layout/notification_footer_view.xml
@@ -10,7 +10,8 @@
         android:id="@+id/notificationView"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:textSize="19dp"
+        android:textSize="23dp"
+        android:paddingTop="8dp"
         android:text="You have no new call notifications!"
         android:textColor="#800000"
         android:gravity="center_horizontal"
