--- a/CallYourMother/res/layout/contact_item.xml
+++ b/CallYourMother/res/layout/contact_item.xml
@@ -29,6 +29,7 @@
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:paddingRight="5dp"
+			    android:paddingLeft="8dp"
 			    android:textSize="20dp"
 			    android:textColor="#000000"
 			    android:text="Joe Shmoe"/>  
@@ -56,6 +57,7 @@
 		    android:id="@+id/contact_number_view"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
+			android:paddingLeft="8dp"
 		    android:text="000-000-0000"/>
         
     </LinearLayout>
