--- a/CallYourMother/res/layout/update_contact_transactions.xml
+++ b/CallYourMother/res/layout/update_contact_transactions.xml
@@ -4,10 +4,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/call"
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
-    </TextView>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/call"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" >
+            </TextView>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
