--- a/CallYourMother/res/layout/notification_drawer.xml
+++ b/CallYourMother/res/layout/notification_drawer.xml
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#D5E4EB"
-    android:orientation="vertical" >
-    
-     <ListView
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#D5E4EB">
+
+    <ListView
         android:id="@+id/listView3"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
-   
+        android:layout_height="wrap_content" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/test"
+        android:layout_width="1dip"
+        android:layout_height="100dip"
+        android:text="" />
+
+</RelativeLayout>
