--- a/CallYourMother/res/layout/notification_footer_view.xml
+++ b/CallYourMother/res/layout/notification_footer_view.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#D5E4EB"
-    android:orientation="vertical" >
-    
-    
-    <TextView
-        android:id="@+id/notificationView"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:textSize="23dp"
-        android:paddingTop="8dp"
-        android:text="You have no new call notifications!"
-        android:textColor="#800000"
-        android:gravity="center_horizontal"
-        />
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="horizontal"
+    android:paddingBottom="7dip"
+    android:paddingTop="7dip"
+    android:background="#D5E4EB" >
 
+    <LinearLayout
+        android:id="@+id/footer_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/notificationView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:paddingTop="8dp"
+            android:text="You have no new call notifications!"
+            android:textColor="#800000"
+            android:textSize="23dp" />
+    </LinearLayout>
 
 </LinearLayout>
