--- a/CallYourMother/res/layout/notification_item.xml
+++ b/CallYourMother/res/layout/notification_item.xml
@@ -8,7 +8,7 @@
     android:padding="10dp">
         
     <ImageView 
-        android:id="@+id/contact_image_view"
+        android:id="@+id/notif_contact_image_view"
         android:layout_width="50dp"
         android:layout_height="50dp"/>
    
@@ -23,7 +23,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 	        <TextView 
-			    android:id="@+id/contact_name_view"
+			    android:id="@+id/notif_contact_name_view"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:paddingRight="5dp"
@@ -32,11 +32,10 @@
 			    android:text="Joe Shmoe"/>  
 			    
 	        <TextView
-			    android:id="@+id/contact_number_view"
+			    android:id="@+id/notif_contact_number_view"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
-			    android:layout_toRightOf="@id/contact_name_view"
-			    android:layout_alignBaseline="@id/contact_name_view"
+			    android:layout_below="@id/notif_contact_name_view"
 			    android:text="000-000-0000"/>
 	        
 	        <TextView
@@ -46,15 +45,16 @@
 			    android:layout_alignParentRight="true"
 			    android:textSize="20dp"
 			    android:textColor="#ff0000"
-			    android:text="x"/>
+			    android:text="x"
+			    android:onClick="resetNotification"/>
 			    
          </RelativeLayout>
 		
         <TextView
-		    android:id="@+id/contact_number_view"
+		    android:id="@+id/notif_days_view"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:text="6 days since you last talked"/>
+		    android:text="0 days since you last talked"/>
         
     </LinearLayout>
     	
