--- a/CallYourMother/res/layout/notification_footer_view.xml
+++ b/CallYourMother/res/layout/notification_footer_view.xml
@@ -21,10 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:paddingTop="8dp"
+            android:paddingTop="10dp"
             android:text="You have no new call notifications!"
-            android:textColor="#800000"
-            android:textSize="23dp" />
+            android:textColor="#d31515"
+            android:textSize="20dp" />
     </LinearLayout>
 
 </LinearLayout>
