--- a/CallYourMother/res/layout/header.xml
+++ b/CallYourMother/res/layout/header.xml
@@ -4,14 +4,13 @@
     android:orientation="vertical" 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#D5E4EB"> 
-    
+    android:background="#D5E4EB">
 
     <ImageView
         android:id="@+id/logoView"
-        android:layout_width="fill_parent"
-        android:layout_height="40dp"
+        android:layout_width="248dp"
+        android:layout_height="72dp"
+        android:layout_gravity="center"
         android:src="@drawable/logo" />
-    
 
 </LinearLayout>
