--- a/CallYourMother/res/layout/circle_item.xml
+++ b/CallYourMother/res/layout/circle_item.xml
@@ -1,29 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/circle_item"
-    android:orientation="horizontal" 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#D5E4EB"
-    android:padding="10dp">
-        
-    
-		<TextView 
-		    android:id="@+id/circle_name"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:paddingRight="5dp"
-		    android:textSize="20dp"
-		    android:textColor="#000000"
-		    android:text="Sample Circle"/>    
-		    
-		<TextView
-		    android:id="@+id/contact_number"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="(X Contacts)"/>
+    android:padding="10dp"             
+    android:orientation="horizontal" >
+
+  
 
 
-    
+        <TextView
+            android:id="@+id/circle_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="5dp"
+            android:text="Sample Circle"
+            android:textColor="#000000"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/contact_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(X Contacts)"
+            android:textStyle="italic" />
+
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_alignParentRight="true"
+            android:text=">"
+            android:textColor="#888888"
+            android:textSize="22dp" />
+ </RelativeLayout>
+
     </LinearLayout>
