--- a/CallYourMother/res/layout/view_footer.xml
+++ b/CallYourMother/res/layout/view_footer.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal" 
+        android:paddingTop="8dp">
 
         <Button
             android:id="@+id/delete_circle_button"
@@ -23,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
              android:layout_weight="0.5"
+             
             android:text="Edit"
             android:textSize="12dp" />
 
