--- a/CallYourMother/res/layout/notification_header.xml
+++ b/CallYourMother/res/layout/notification_header.xml
@@ -9,7 +9,7 @@
 			android:id="@+id/notif_drawer_id"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:text="Outstanding Calls:"
+			android:text="Your Circle Notifications:"
 			android:paddingLeft="5dp"
 			android:textColor="#000000"
 			android:textSize="16dp"/>
