--- a/CallYourMother/res/layout/notification_item.xml
+++ b/CallYourMother/res/layout/notification_item.xml
@@ -3,12 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" 
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:background="#D5E4EB"
     android:padding="10dp">
         
     <ImageView 
         android:id="@+id/notif_contact_image_view"
+        android:layout_gravity="center_vertical"
         android:layout_width="50dp"
         android:layout_height="50dp"/>
    
@@ -27,6 +28,7 @@
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:paddingRight="5dp"
+			    android:paddingLeft="5dp"
 			    android:textSize="20dp"
 			    android:textColor="#000000"
 			    android:text="Joe Shmoe"/>  
@@ -36,6 +38,7 @@
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_below="@id/notif_contact_name_view"
+			    android:paddingLeft="5dp"
 			    android:text="000-000-0000"/>
 	        
 	        <TextView
@@ -54,6 +57,8 @@
 		    android:id="@+id/notif_days_view"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
+		    android:textColor="#555555"
+			android:paddingLeft="5dp"
 		    android:text="0 days since you last talked"/>
         
     </LinearLayout>
