--- a/CallYourMother/res/layout/add_circle_footer_view.xml
+++ b/CallYourMother/res/layout/add_circle_footer_view.xml
@@ -1,44 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D5E4EB"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-     <!--    <Button
-            android:id="@+id/notification_test"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Make notification"
-            android:layout_weight="0.33"
-            android:textSize="12dp" />
-
         <Button
-	        android:id="@+id/get_calls_test"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="Get recent calls"
-	        android:layout_weight="0.33"
-	        android:textSize="12dp" />
-          -->
-         
-         <Button
             android:id="@+id/add_circle_button"
-            android:layout_width="wrap_content"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="Add a Circle"
-            android:layout_weight="1"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="0.52"
+            android:text="Add a New Circle"
             android:textSize="12dp" />
-
-         
-        
-    </LinearLayout>
-
-        
        
-</LinearLayout>
+</RelativeLayout>
